# cjames23.github.io

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  Trunk.toml  build.py  cjames-web-21c5364bd16c960f.js  cjames-web-21c5364bd16c960f_bg.wasm  cjames-web-25cef4a6afa14bdd.js  cjames-web-25cef4a6afa14bdd_bg.wasm  cjames-web-2db14c200caf6507.js  cjames-web-2db14c200caf6507_bg.wasm  cjames-web-316572e701889c67.js  cjames-web-316572e701889c67_bg.wasm  cjames-web-3561f020fd39d7ac.js  cjames-web-3561f020fd39d7ac_bg.wasm  cjames-web-3dc7ec8b6d432cca.js  cjames-web-3dc7ec8b6d432cca_bg.wasm  cjames-web-3ff29bffe4d9a35e_bg.wasm  cjames-web-4bb4a4de06c1beb0_bg.wasm  cjames-web-4f8ddc02144e552c.js  cjames-web-4f8ddc02144e552c_bg.wasm  cjames-web-5bed4da885d1001e.js  cjames-web-5bed4da885d1001e_bg.wasm  cjames-web-5d111f9cb4664b0d.js  cjames-web-5d111f9cb4664b0d_bg.wasm  cjames-web-76ddfebd0e33b405.js  cjames-web-76ddfebd0e33b405_bg.wasm  cjames-web-77b2051d7bd8a17c.js  cjames-web-77b2051d7bd8a17c_bg.wasm  cjames-web-79604eb80f2a45ee.js  cjames-web-79604eb80f2a45ee_bg.wasm  cjames-web-8a1e88ad7a54ac15.js  cjames-web-8a1e88ad7a54ac15_bg.wasm  cjames-web-8a511fd2f85feab3.js  cjames-web-8a511fd2f85feab3_bg.wasm  cjames-web-9b186a527fde14d8.js  cjames-web-9b186a527fde14d8_bg.wasm  cjames-web-aabd251a5165baa.js  (+39 more)
.github/workflows/: continuous_deployment  continuous_deployment.yml  continuous_integration.yml  deploy
app/: blog.py  components.py  pages.py
assets/: 404.html  style.scss  tailwind.css
posts/: ethics-in-the-ai-age.md  hermeneutics-of-provenance.md  index.json  latest-in-hatch.md  learning-rust-with-yew.md  philosophy-of-slavoj-zizek.md
snippets/popper-rs-8d813255017003f5/: inline0.js
src/: app.rs  app_router.rs  lib.rs  main.rs  route.rs  routes.rs
src/components/: comment_form.rs  footer.rs  header.rs  home_header.rs  layout.rs  menu_strip.rs  mod.rs  modal.rs  nav.rs  nav_context.rs  themecontext.rs
src/data/: blog.rs  blog_data.json  comment.rs  header_links.rs  mod.rs
src/icons/: mod.rs  moon.rs  sun.rs
src/pages/: about.rs  admin.rs  blog.rs  blog_post.rs  contact.rs  home.rs  login.rs  mod.rs  page_template.rs  projects.rs
static/: index.html  main.scss
tests/: test_blog.py
