[package]
name = "cjames-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew-router = "0.17.0"
wasm-bindgen-futures = "0"
lazy_static = "1"
serde = "1.0.190"
lipsum = "0.9.0"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
gloo = "0.10"
wasm-logger = "0.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }
once_cell = "1"
reqwest = "0.11.22"
dotenvy_macro = "0.15.7"

[dependencies.yew]
version = "0.20.0"
features = ["csr"]

[dependencies.wasm-bindgen]
version = "0"
features = [ "serde-serialize" ]

[dependencies.web-sys]
version = "0"
features = [ "ScrollToOptions", "ScrollBehavior", "Window", "Request" ]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
