[package]
name = "cjames-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
browser-panic-hook = "0.2"
yew-router = "0.18.0"
wasm-bindgen-futures = "0"
lazy_static = "1"
serde = "1.0.190"
lipsum = "0.9.0"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
gloo = "0.11.0"
wasm-logger = "0.2"
instant = { version = "0.1", features = ["wasm-bindgen"] }
once_cell = "1"
reqwest = "0.12.8"
yew-sidebar = "0.1.4"
patternfly-yew = "0.6.3"
yew-hooks = "0.3"
yew-more-hooks = { version = "0.3.3", features = ["yew-hooks"] }
yew-nested-router = "0.7.0"


[dependencies.yew]
version = "0.21.0"
features = ["csr"]

[dependencies.wasm-bindgen]
version = "0"
features = [ "serde-serialize" ]

[dependencies.web-sys]
version = "0"
features = [ "ScrollToOptions", "ScrollBehavior", "Window", "Request","HtmlElement",
    "HtmlInputElement",
    "MediaQueryList" ]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true